Fixed size of footer on mobile devices Added padding to the bottom of the content to stop having no visual padding between buttons and text in the main content and the footer Made the navigation fill the full width of the screen Added a "Timetable Parser" header to the navigation bar, which is also a link to the home page Removed IE conditionals and the "no-js" class from the html element Updated the wording on the timetable complete page to try and be more clear

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -5,7 +5,6 @@
 // Reset and dependencies
 @import "bootstrap/normalize";
 @import "bootstrap/print";
-// @import "bootstrap/glyphicons";
 
 // Core CSS
 @import "bootstrap/scaffolding";
@@ -20,6 +19,59 @@
 @import "bootstrap/navs";
 @import "bootstrap/navbar";
 @import "bootstrap/alerts";
+
+/* Site-wide */
+
+#website-heading {
+    font-size: 18px;
+    line-height: 20px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+#page-main {
+    padding-bottom: 15px;
+}
+
+$footerHeight: 90px;
+$smallDevicesFooterHeight: 90px;
+
+/* Sticky footer */
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin-bottom: $footerHeight;
+    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+        margin-bottom: $smallDevicesFooterHeight;
+    }
+}
+
+#page-footer {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: $footerHeight;
+    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+        height: $smallDevicesFooterHeight;
+    }
+    background-color: #f5f5f5;
+}
+
+$footerContainerPadding: 10px;
+
+#footer-container {
+    height: $footerHeight - $footerContainerPadding * 2;
+    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+        height :$smallDevicesFooterHeight - $footerContainerPadding * 2;
+    }
+    padding-top: $footerContainerPadding;
+}
+
+/* Timetable complete page */
 
 .copy-text-wrapper {
     position: relative;
@@ -47,10 +99,6 @@
     }
 }
 
-.hidden {
-    display: none;
-}
-
 #timetable-options-form {
     .control-label {
         text-align: left;
@@ -58,30 +106,8 @@
     }
 }
 
-$footerHeight: 75px;
+/* General */
 
-/* Sticky footer */
-html {
-    position: relative;
-    min-height: 100%;
-}
-
-body {
-    margin-bottom: $footerHeight;
-}
-
-#page-footer {
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: $footerHeight;
-    background-color: #f5f5f5;
-}
-
-$footerContainerPadding: 10px;
-
-#footer-container {
-    height: $footerHeight - $footerContainerPadding * 2;
-    padding-top: $footerContainerPadding;
+.hidden {
+    display: none;
 }
